tests/ui/impl-trait/issues/issue-74282.stderr
error[E0308]: mismatched types
  --> $DIR/issue-74282.rs:7:15
   |
LL |       type Closure = impl Fn() -> u64;
   |                      ---------------- the expected opaque type
...
LL |       Anonymous(|| {
   |  _____---------_^
   | |     |
   | |     arguments to this struct are incorrect
LL | |
LL | |
LL | |         3
LL | |     })
   | |_____^ expected opaque type, found closure
   |
   = note: expected opaque type `Closure`
                  found closure `[closure@$DIR/issue-74282.rs:7:15: 7:17]`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object
note: tuple struct defined here
  --> $DIR/issue-74282.rs:5:12
   |
LL |     struct Anonymous(Closure);
   |            ^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-74282.rs:7:5
   |
LL |   fn main() {
   |             - expected `()` because of default return type
...
LL | /     Anonymous(|| {
LL | |
LL | |
LL | |         3
LL | |     })
   | |      ^- help: consider using a semicolon here: `;`
   | |______|
   |        expected `()`, found `Anonymous`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
